<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Hint sulle operazioni da eseguire -->
    <TextView
        android:id="@+id/ReceiverTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/PerIniziareReceiver"
        android:textAlignment="center"
        android:textSize="28sp"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">
    </TextView>
    
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ReceiverSelector"
        app:layout_constraintTop_toBottomOf="@+id/ReceiverTextView"
        app:layout_constraintBottom_toTopOf="@+id/AvviaRicercaButton"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SelezionaDistanza" >
        <AutoCompleteTextView
            android:id="@+id/ReceiverSelection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none">
        </AutoCompleteTextView>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Pulsante per l'avvio della calibrazione del sensore -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/AvviaRicercaButton"
        style="@style/HoleScanner.MaterialButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/verde_chiaro"
        android:elevation="10dp"
        android:text="@string/avviaRicerca"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ReceiverSelector"
        app:layout_constraintVertical_bias="0.747" />

</androidx.constraintlayout.widget.ConstraintLayout>