<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/SenderFragmentLayout"
    android:layout_marginEnd="15dp"
    android:layout_marginStart="15dp"
    android:scrollbars="none">


    <!-- Hint sulle operazioni da eseguire -->
    <TextView
        android:id="@+id/SenderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/Cronometro"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/PerIniziare"
        android:textAlignment="center"
        android:textSize="28sp"

        >
    </TextView>

    <!-- Cronometro visualizzato durante la registrazione -->
    <Chronometer
        android:id="@+id/Cronometro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="80sp"
        android:gravity="center"
        android:textStyle=""
        app:layout_constraintBottom_toTopOf="@+id/AvviaRegistrazioneButton"
        app:layout_constraintTop_toTopOf="parent" >
    </Chronometer>

    <!-- Pulsante per l'avvio della calibrazione del sensore -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/AvviaCalibrazioneButton"
        style="@style/HoleScanner.MaterialButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/verde_chiaro"
        android:elevation="10dp"
        android:text="@string/avviaCalibrazione"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />

    <!-- Pulsante per l'avvio della registrazione -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/AvviaRegistrazioneButton"
        style="@style/HoleScanner.MaterialButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/verde_chiaro"
        android:elevation="10dp"
        android:text="@string/avvia"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />


    <!-- Pulsante per interrompere la registrazione delle buche -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/InterrompiRegistrazioneButton"
        style="@style/HoleScanner.MaterialButton"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_margin="10dp"
        android:backgroundTint="@color/light_red"
        android:elevation="10dp"
        android:text="@string/stop"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.747" />
</androidx.constraintlayout.widget.ConstraintLayout>