<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RegistrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/start_background"
    android:padding="20dp">

    <!-- Titolo -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TitoloLayout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/LogoImageView_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/hole_scanner" />

        <TextView
            android:id="@+id/NaTourTextView_login"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif-light"
            android:gravity="bottom"
            android:text="@string/HoleScanner"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/InserisciCredenzialiTextView"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toRightOf="@id/LogoImageView_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/InserisciCredenzialiTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="sans-serif"
            android:text="@string/InserireCredenziali"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.5"
            app:layout_constraintLeft_toRightOf="@id/LogoImageView_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/NaTourTextView_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>




    <!-- Conferma -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConfermaLayout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ConfermaButton_login"
            style="@style/HoleScanner.MaterialButton"
            android:layout_width="150dp"
            android:layout_margin="10dp"
            android:backgroundTint="@color/verde_chiaro"
            android:elevation="10dp"
            android:text="@string/Conferma"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Inserimento nome utente -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="91dp"
        app:layout_constraintBottom_toTopOf="@+id/ConfermaLayout_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitoloLayout_login">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/UsernameTextInput_registration"
            style="@style/HoleScanner.Registration.TextInputLayout"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/Username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UsernameEditText_registration"
                style="@style/HoleScanner.Registration.TextInputLayout.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>